Refactor of the two algorithms to have the common functions in the parent abtrasct class SudokuAbstractAlgorithm. Clean up. Documentation.